# quran

./: .dockerignore  .editorconfig  .gitignore  Directory.Build.props  Directory.Packages.props  Dockerfile  QuranCompanion.slnx  README.md  docker-compose.yml
.github/workflows/: build-and-deploy.yml  ci.yml
apps/android/: settings.gradle.kts
apps/android/app/: build.gradle.kts
apps/android/gradle/: libs.versions.toml
apps/ios/: Info.plist
apps/ios/QuranMeali/: ContentView.swift  DesignTokens.swift  QuranMealiApp.swift
apps/ios/QuranMeali.xcodeproj/: project.pbxproj
apps/ios/QuranMealiTests/: QuranMealiTests.swift
apps/ios/QuranMealiUITests/: QuranMealiUITests.swift  QuranMealiUITestsLaunchTests.swift
apps/web/: .dockerignore  .env.example  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json
apps/web/src/: App.tsx  styles.css  (+1 more)
docs/: data-sources.md  design-language.md
seed-data/: README.md
seed-data/quran/: surahs.json  verses.json
seed-data/translations/: elmalili.json  sources.json
services/embedder/: Dockerfile  README.md  app.py  pyproject.toml
services/seed-data/: Dockerfile  embed-job.yaml  job.yaml
src/QuranCompanion.Api/: Program.cs  QuranCompanion.Api.csproj  appsettings.json
src/QuranCompanion.Application/: DependencyInjection.cs  QuranCompanion.Application.csproj
src/QuranCompanion.Domain/: QuranCompanion.Domain.csproj
src/QuranCompanion.Infrastructure/: DependencyInjection.cs  QuranCompanion.Infrastructure.csproj
tests/QuranCompanion.Application.Tests/: QuranCompanion.Application.Tests.csproj
(+167 files in other folders)
